http_ingress/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-poststart
  labels:
   app: httptest
spec:
  readinessGates:
    - conditionType: "edwinready"
  containers:
    - name: lifecycle-http-poststart
      image: edwindocker/httpserver:latest
      volumeMounts:
       - name: http-con
         mountPath: "/etc/envoy"
         readOnly: true
      resources:
        limits:
          cpu: "1"
          memory: 200Mi
        requests:
          cpu: "1"
          memory: 200Mi
      lifecycle:
        postStart:
          exec:
            command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/messagei; sleep 10"]
      livenessProbe:
        httpGet:
          port: 80
          path: /rootHandler
          httpHeaders:
          - name: VERSION
            value: V2
        initialDelaySeconds: 15
        timeoutSeconds: 1
  volumes:
  - name: http-con
    configMap:
      name: http-config
