http_ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-basic
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: httptest
